--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,35 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
- background-color: white;
+  background-color: white;
 }
 .back {
-  background-image: url('/src/assets/bglogin.png');
+  background-image: url("/src/assets/bglogin.png");
   background-size: cover;
   background-position: center;
+}
+.custom-select {
+  appearance: none;
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-width="2" d="M8 9l4 4 4-4"/></svg>');
+  background-repeat: no-repeat;
+  background-position: left 10px top 50%;
+  background-size: 40px;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #03aa77;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #03aa77;
+  cursor: pointer;
 }
